assets/css/global.css
@font-face {
    font-family: "Anuphan";
    src: local("Anuphan"), url("/assets/Anuphan.ttf");
}

:root {
    /* COLORS */
    --c-background: #faf9f9;
    --c-text: #23222A;
    --c-primary-1: #581ACB;
    --c-primary-2: #946ddc;
    --c-primary-3: #c8b5eb;
    --c-success: #1ACB52;
    --c-warning: #E3D926;
    --c-danger: #E21D1D;

    /* FONTS */
    --font-size: 16px;
    --font-family: "Anuphan", sans-serif;

    /* SPACING */
    --s-small: 0.5rem;
    --s-medium: 1rem;
    --s-large: 1.5rem;
    --s-extra-large: 3rem;
}

html,
body {
    margin: 0;
    padding: 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    background-color: var(--c-background);
    color: var(--c-text);
    font-size: var(--font-size);
    font-family: var(--font-family);
}

header {
    width: 100%;
    height: 3rem;
    padding: 0;
    margin: 0;
    border-bottom: 0.20rem solid var(--c-primary-2);
    box-sizing: border-box;
}

header nav {
    width: calc(100% - 2rem);
    height: 100%;
    padding: 0 1rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

main {
    width: 100%;
    /* height: calc(100vh - 3rem); */
        flex: 1 0 auto;
    margin: 0;
}

a {
    color: var(--c-primary-1);
    text-decoration: none;
    transition: 0.15s;
}

a:hover {
    color: var(--c-primary-2);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 var(--s-medium) 0;
    padding: 0;
}

button {
    font-size: 1em;
}

:where(button, input[type=submit]) {
    background-color: var(--c-primary-1);
    color: var(--c-background);
    padding: var(--s-small) var(--s-medium);
    border: 0;
    border-radius: 0.25rem;
    transition: 0.15s;
}

:where(button, input[type=submit]):hover,
:where(button, input[type=submit]):focus {
    background-color: var(--c-primary-2);
}

input,
textarea {
    font-size: 1em;
}

input:not([type=submit]) {
    border: none;
    border-bottom: 0.2rem solid var(--c-primary-2);
    background-color: transparent;
    outline: none;
    transition: border-bottom 0.15s;
}

input:not([type=submit]):hover,
input:not([type=submit]):focus {
    border-color: var(--c-primary-1);
}

textarea {
    flex-grow: 1;
    border: none;
    width: 100%;
    background-color: transparent;
    outline: none;
    resize: none;
}

